<resources>
    <!-- Title of the app [CHAR LIMIT=20] -->
    <string name="app_name">Inventorius</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Everything is out of stck</string>

    <!-- Subtitle text for the empty view that prompts the user to add an item [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding an item</string>

    <!-- Label for overflow menu option that inserts fake item data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all item data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Items</string>

    <!-- Title for the activity to add a new item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_item">Add an Item</string>

    <!-- Title for the activity to edit an existing item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_item">Edit Item</string>

    <!-- Label for editor menu option to save item and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current item [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new item has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_item_successful">Item saved</string>

    <!-- Toast message in editor when new item has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_item_failed">Error with saving item</string>

    <!-- Toast message in editor when current item was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_item_successful">Item updated</string>

    <!-- Toast message in editor when current item has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_item_failed">Error with updating item</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current item [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current item [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this item?</string>

    <!-- Dialog button text for the option to confirm deleting the current item [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current item [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Toast message in editor when current item was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_successful">Item deleted</string>

    <!-- Toast message in editor when current item has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_failed">Error with deleting item</string>

    <!-- Toast message in editor when item's name is required [CHAR LIMIT=NONE] -->
    <string name="item_name_required">Item name required. Product not saved</string>

    <!-- Toast message in editor when item's quantity is required [CHAR LIMIT=NONE] -->
    <string name="item_quantity_required">Item quantity required. Product not saved</string>

    <!-- Toast message in editor when item's price is required [CHAR LIMIT=NONE] -->
    <string name="item_price_required">Item price required. Product not saved</string>

    <!-- Toast message in editor when item's image is required [CHAR LIMIT=NONE] -->
    <string name="item_image_required">Item image required. Product not saved</string>

    <!-- Sample email address [CHAR LIMIT=NONE] -->
    <string name="example_email">example@gmail.com</string>

    <!-- Sample order summary [CHAR LIMIT=NONE] -->
    <string name="order_summary">Order summary</string>

    <!-- Sample email's restock String [CHAR LIMIT=NONE] -->
    <string name="items_to_restock">Required items to restock:</string>

    <!-- Sample email's restock String [CHAR LIMIT=NONE] -->
    <string name="current_quantity">\nCurrent quantity:</string>

    <!-- Toast message when item's name is required [CHAR LIMIT=NONE] -->
    <string name="quantity_greater_than_zero">Quantity must be greater than or equal to 0</string>
    <string name="content_desc_item_image">item_image</string>
    <string name="item_description">Item</string>
    <string name="item_name_type">Name/Type</string>
    <string name="item_quantity">Quantity (pcs)</string>
    <string name="item_quantity_value">0</string>
    <string name="item_price">Price (€)</string>
    <string name="item_price_value">0</string>
    <string name="order_button">order</string>
    <string name="increase_item_quantity">Increase item quantity</string>
    <string name="decrease_item_quantity">Decrease item quantity</string>
    <string name="no_items_image">No items image</string>

</resources>
