<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.inventorius.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_desc_item_image"
                android:maxHeight="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/pencil" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/item_image"
                android:layout_alignParentRight="true"
                android:layout_margin="2dp"
                android:src="@drawable/ic_image" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/item_description"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/edit_item_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="sans-serif-light"
                android:hint="@string/item_name_type"
                android:inputType="textCapWords"
                android:textAppearance="?android:textAppearanceMedium" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/item_quantity"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/edit_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:hint="@string/item_quantity_value"
                android:inputType="number"
                android:textAppearance="?android:textAppearanceMedium" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/increase_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:contentDescription="@string/increase_item_quantity"
                    android:src="@drawable/ic_add" />

                <ImageButton
                    android:id="@+id/decrease_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:contentDescription="@string/decrease_item_quantity"
                    android:src="@drawable/ic_remove" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/item_price"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/edit_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="sans-serif-light"
                android:hint="@string/item_price_value"
                android:inputType="number"
                android:textAppearance="?android:textAppearanceMedium" />


        </LinearLayout>

        <Button
            android:id="@+id/item_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/order_button"
            android:textColor="@android:color/white" />

    </LinearLayout>

</ScrollView>

